--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon bot.js",
     "git": "git add * && git commit && git push",
     "git-redo": "nodemon bot.js",
+    "update-and-start": "npm run kill && git pull && npm run start-background",
     "start-background": "nohup node bot.js &",
     "kill": "skill -c nohup node bot.js &",
     "backup": "mkdir ./data/.backup -p && cp ./data/data.db ./data/.backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null",
