--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "better-sqlite3": "^8.0.1",
     "d": "^1.0.1",
     "dotenv": "^16.0.3",
+    "fast-csv": "^4.3.6",
     "node-telegram-bot-api": "^0.60.0",
     "nodemon": "^2.0.20"
   }
