--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "d": "^1.0.1",
     "dotenv": "^16.0.3",
     "easy-currencies": "^1.7.0",
+    "express": "^4.18.2",
     "fast-csv": "^4.3.6",
     "node-telegram-bot-api": "^0.60.0",
     "nodemon": "^2.0.20"
