* Caddy proxy script * Start api script * Update api commands

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "dev": "nodemon bot.js",
     "git": "git add * && git commit && git push",
     "git-redo": "nodemon bot.js",
-    "update-and-start": "npm run kill && git pull && npm run start-background",
-    "start-background": "nohup node bot.js &",
-    "kill": "skill -c nohup node bot.js &",
+    "update-and-start": "npm run kill && git pull && npm run start-bot && npm run start-api-https",
+    "start-bot": "nohup node bot.js &",
+    "start-api-https": "caddy start",
+    "kill": "caddy stop && skill -c nohup node bot.js &",
     "backup": "mkdir ./data/.backup -p && cp ./data/data.db ./data/.backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null",
     "reset": "mkdir ./data/.backup -p && mv ./data/data.db ./data/.backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null && cp ./data/sample.db ./data/data.db"
   },
@@ -20,6 +21,7 @@
     "better-sqlite3": "^8.0.1",
     "chartjs-to-image": "^1.1.0",
     "config": "^3.3.8",
+    "cors": "^2.8.5",
     "crypto-convert": "^2.1.4",
     "d": "^1.0.1",
     "dotenv": "^16.0.3",
