--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "start": "node bot.js",
     "dev": "nodemon bot.js",
+    "embassy-tunnel": "ssh -f -NR 8001:127.0.0.1:8001 root@nickkiselev.me -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -o ExitOnForwardFailure=yes",
+    "embassy-api":"npm run embassy-tunnel && nohup node ./services/embassyApi.js &",
+    "embassy-api-service":"/usr/local/lib/nodejs/node-v16.19.0-linux-x86/bin/npm run embassy-tunnel && /usr/local/lib/nodejs/node-v16.19.0-linux-x86/bin/node /home/nick/hackerembassy-tg-bot/services/embassyApi.js",
+    "stop-embassy-api":"skill -c 'nohup node ./services/embassyApi.js &'",
     "git": "git add * && git commit && git push",
     "git-redo": "nodemon bot.js",
-    "update-and-start": "npm run kill && git pull && npm run start-bot && npm run start-api-https",
+    "update-and-start": "npm run kill && git pull && npm i && npm run start-bot && npm run start-api-https",
     "start-bot": "nohup node bot.js &",
     "start-api-https": "caddy start",
     "kill": "skill -c nohup node bot.js &",
@@ -28,6 +32,7 @@
     "easy-currencies": "^1.7.0",
     "express": "^4.18.2",
     "fast-csv": "^4.3.6",
+    "node-fetch": "^2.6.8",
     "node-telegram-bot-api": "^0.60.0",
     "nodemon": "^2.0.20"
   }
