--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.2",
     "fast-csv": "^4.3.6",
     "local-devices": "^4.0.0",
+    "luci-rpc": "^1.0.5",
     "node-fetch": "^2.6.8",
     "node-telegram-bot-api": "^0.60.0",
     "nodemon": "^2.0.20"
