--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "hacker-embassy-bot",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Hacker Embassy management bot",
-  "main": "bot.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node bot.js",
-    "dev": "nodemon bot.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "embassy-tunnel": "ssh -f -NR 8001:127.0.0.1:8001 root@nickkiselev.me -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -o ExitOnForwardFailure=yes",
     "embassy-api": "npm run embassy-tunnel && nohup node embassyApi.js &",
     "embassy-api-service": "/usr/bin/npm run embassy-tunnel && /usr/bin/node embassyApi.js",
     "stop-embassy-api": "skill -c 'nohup node embassyApi.js &'",
     "git": "git add * && git commit && git push",
-    "git-redo": "nodemon bot.js",
+    "git-redo": "git add * && git commit --amend && git push --force",
     "update-and-start": "npm run kill && git pull && npm i && npm run start-bot && npm run start-api-https",
-    "start-bot": "nohup node bot.js &",
+    "start-bot": "nohup node app.js &",
     "start-api-https": "caddy start ./deploy/api/Caddyfile",
-    "kill": "skill -c nohup node bot.js &",
+    "kill": "skill -c nohup node app.js &",
     "backup": "mkdir ./data/.backup -p && cp ./data/data.db ./data/.backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null",
     "reset": "mkdir ./data/.backup -p && mv ./data/data.db ./data/.backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null && cp ./data/sample.db ./data/data.db",
     "init": "cp ./data/sample.db ./data/data.db && echo HACKERBOTTOKEN=\"replace_with_bot_father_token\" > .env"
