--- a/deploy/embassy-api/autossh-tunnel.service
+++ b/deploy/embassy-api/autossh-tunnel.service
@@ -5,7 +5,7 @@ After=network-online.target
 [Service]
 Type=simple
 Environment="AUTOSSH_GATETIME=0"
-ExecStart=/usr/bin/ssh -N -R 8222:127.0.0.1:22 root@nickkiselev.me -o "ServerAliveInterval=30" -o "ServerAliveCountMax=3" -o ExitOnForwardFailure=yes
+ExecStart=/usr/bin/ssh -N -R 8222:127.0.0.1:22 ubuntu@gateway.hackerembassy.site -o "ServerAliveInterval=30" -o "ServerAliveCountMax=3" -o ExitOnForwardFailure=yes
 RuntimeMaxSec=1800
 Restart=always
 RestartSec=15
