--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "embassy-tunnel": "ssh -f -NR 8001:127.0.0.1:8001 root@nickkiselev.me -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -o ExitOnForwardFailure=yes",
+    "embassy-tunnel": "ssh -f -NR 8001:127.0.0.1:8001 ubuntu@gateway.hackerembassy.site -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -o ExitOnForwardFailure=yes -i /home/nick/.ssh/gateway 2>/dev/null",
     "embassy-api": "npm run embassy-tunnel && nohup node embassyApi.js &",
     "embassy-api-service": "/usr/bin/npm run embassy-tunnel && /usr/bin/node embassyApi.js",
     "stop-embassy-api": "skill -c 'nohup node embassyApi.js &'",
@@ -14,7 +14,7 @@
     "git-redo": "git add * && git commit --amend && git push --force",
     "update-and-start": "npm run kill && git pull && npm i && npm run start-bot && npm run start-api-https",
     "start-bot": "nohup node app.js &",
-    "start-api-https": "caddy start --config ./deploy/api/Caddyfile 2>/dev/null",
+    "start-api-https": "sudo caddy start --config ./deploy/api/Caddyfile 2>/dev/null",
     "kill": "skill -c nohup node app.js &",
     "backup": "mkdir ./data/.backup -p && cp ./data/data.db ./data/.backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null",
     "reset": "mkdir ./data/.backup -p && mv ./data/data.db ./data/.backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null && cp ./data/sample.db ./data/data.db",
