--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mqtt": "^4.3.7",
     "node-fetch": "^2.6.8",
     "node-rsa": "^1.1.1",
+    "node-ssh": "^13.1.0",
     "node-telegram-bot-api": "^0.60.0",
     "nodemon": "^2.0.20",
     "winston": "^3.8.2"
