--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "node-ssh": "^13.1.0",
     "node-telegram-bot-api": "^0.60.0",
     "nodemon": "^2.0.20",
-    "winston": "^3.8.2"
+    "ping": "^0.4.4",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
