--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "embassy-tunnel": "ssh -f -NR 8001:127.0.0.1:8001 ubuntu@gateway.hackerembassy.site -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -o ExitOnForwardFailure=yes -i /home/nick/.ssh/gateway 2>/dev/null",
-    "embassy-api": "npm run embassy-tunnel && nohup node embassyApi.js &",
-    "embassy-api-service": "/usr/bin/npm run embassy-tunnel && /usr/bin/node embassyApi.js",
+    "embassy-api": "nohup node embassyApi.js &",
+    "embassy-api-service": "/usr/bin/node embassyApi.js",
     "stop-embassy-api": "skill -c 'nohup node embassyApi.js &'",
     "git": "git add * && git commit && git push",
     "git-redo": "git add * && git commit --amend && git push --force",
