--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "start-bot": "nohup node app.js &",
     "start-api-https": "sudo caddy start --config ./deploy/api/Caddyfile 2>/dev/null",
     "kill": "skill -c nohup node app.js &",
-    "backup": "mkdir ./data/.backup -p && cp ./data/data.db ./data/.backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null",
-    "reset": "mkdir ./data/.backup -p && mv ./data/data.db ./data/.backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null && cp ./data/sample.db ./data/data.db",
-    "init": "cp ./data/sample.db ./data/data.db && echo HACKERBOTTOKEN=\"replace_with_bot_father_token\" > .env"
+    "backup": "mkdir ./data/backup -p && cp ./data/db/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null",
+    "reset": "mkdir ./data/backup -p && mv ./data/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null && cp ./data/sample.db ./data/data.db",
+    "init": "cp ./data/sample.db ./data/db/data.db && echo HACKERBOTTOKEN=\"replace_with_bot_father_token\" > .env"
   },
   "author": "Nick Kiselev",
   "license": "ISC",
