--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "kill": "skill -c nohup node app.js &",
     "backup": "mkdir ./data/backup -p && cp ./data/db/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null",
     "reset": "mkdir ./data/backup -p && mv ./data/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null && cp ./data/sample.db ./data/data.db",
-    "init": "cp ./data/sample.db ./data/db/data.db && echo HACKERBOTTOKEN=\"replace_with_bot_father_token\" > .env"
+    "init": "cp ./data/sample.db ./data/db/data.db && echo HACKERBOTTOKEN=\"replace_with_bot_father_token\" > .env",
+    "prepare": "husky install",
+    "lint": "eslint src/**/*.js",
+    "lint-fix": "eslint --fix src/**/*.js",
+    "pretty": "prettier --write 'src/**/*.js'"
   },
   "author": "Nick Kiselev",
   "license": "ISC",
@@ -45,5 +49,18 @@
     "ping": "^0.4.4",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.2"
+  },
+  "lint-staged":{
+    "**/*.{js,jsx,ts,tsx}":[
+      "npx prettier --write",
+      "npx eslint --fix"
+    ]
   }
 }
