--- a/deploy/roles/dockerized_service/tasks/main.yml
+++ b/deploy/roles/dockerized_service/tasks/main.yml
@@ -40,7 +40,15 @@
       when: config_volume_templates is defined
       register: templates_update
 
-    - name: update files
+    - name: ensure dirs
+      file:
+        state: directory
+        path: "{{ config_volume_mount.path }}/v/{{ item.dest | dirname }}"
+        mode: "755"
+      with_items: "{{ config_volume_files }}"
+      when: config_volume_files is defined
+
+    - name: update extra files
       copy:
         src: "{{ item.src }}"
         dest: "{{ config_volume_mount.path }}/v/{{ item.dest }}"
