--- a/deploy/host.yml
+++ b/deploy/host.yml
@@ -3,7 +3,7 @@
     linux_users:
       - name: '{{ ansible_user_id }}'
         ssh_keys: |
-          ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBh43317pq5H98m+tsV+1VdvWtf+MxEgeaOn3dDSfwWf termux@zenfone
+          ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBh43317pq5H98m+tsV+1VdvWtf+MxEgeaOn3dDSfwWf himura-termux@zenfone
           ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIPHZEGTS/7CdQtGPduRCz0Ie0FMJgfIVvSWkxz1pzmst himura-personal@work-nb
           ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAID07e+8zSrQ9sZ6oIMoo6nE45VLGw5eftkjKInT9K3A6 himura-work@work-nb
 
@@ -11,19 +11,26 @@
     - role: common
       vars:
         skip_host_config: true
+        skip_docker_install: true
+        apt_packages:
+          - sudo
+          - bash-completion
+          - ca-certificates
+          - python3-pip
+          - curl
 
     - role: docker
       vars:
-        docker_login:
-          - registry_url: ghcr.io
-            username: Himura2la
-            password: !vault |
-              $ANSIBLE_VAULT;1.1;AES256
-              66656164666463666532313834616465653739393163313161636262323438356338313766313732
-              3430363736633666336536383339613530656363623439660a343633343836626230316432386435
-              64653463623530363163626432616331323233353364643737356635393639333838373664343463
-              6164626664323837630a386163666538376439306238323438636464316338393262353264613034
-              66326264356233633435656431376135666635343238303530613863313838363264383439313430
-              3163626565393139653031663733353639613831653439353866
+        # docker_login:
+        #   - registry_url: ghcr.io
+        #     username: Himura2la
+        #     password: !vault |
+        #       $ANSIBLE_VAULT;1.1;AES256
+        #       66656164666463666532313834616465653739393163313161636262323438356338313766313732
+        #       3430363736633666336536383339613530656363623439660a343633343836626230316432386435
+        #       64653463623530363163626432616331323233353364643737356635393639333838373664343463
+        #       6164626664323837630a386163666538376439306238323438636464316338393262353264613034
+        #       66326264356233633435656431376135666635343238303530613863313838363264383439313430
+        #       3163626565393139653031663733353639613831653439353866
 
 #    - watchtower  # TODO
