--- a/deploy/host.yml
+++ b/deploy/host.yml
@@ -1,16 +1,22 @@
 - hosts: all
   vars:
     linux_users:
-      - name: '{{ ansible_user_id }}'
+      - name: '{{ default_ansible_user }}'
+        groups: '{{ default_user_groups }}'
+        ssh_keys: |
+          ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIPHZEGTS/7CdQtGPduRCz0Ie0FMJgfIVvSWkxz1pzmst himura-personal@work-nb
+
+      - name: himura
+        groups: '{{ default_user_groups }}'
         ssh_keys: |
           ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBh43317pq5H98m+tsV+1VdvWtf+MxEgeaOn3dDSfwWf himura-termux@zenfone
           ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIPHZEGTS/7CdQtGPduRCz0Ie0FMJgfIVvSWkxz1pzmst himura-personal@work-nb
           ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAID07e+8zSrQ9sZ6oIMoo6nE45VLGw5eftkjKInT9K3A6 himura-work@work-nb
 
+
   roles:
     - role: common
       vars:
-        skip_host_config: true
         skip_docker_install: true
         apt_packages:
           - sudo
@@ -34,3 +40,5 @@
         #       3163626565393139653031663733353639613831653439353866
 
 #    - watchtower  # TODO
+
+# TODO: change vault password
