--- a/deploy/inventory.yml
+++ b/deploy/inventory.yml
@@ -1,12 +1,17 @@
 all:
   vars:
     ansible_python_interpreter: /usr/bin/python3
+    ansible_become_method: sudo
+    ansible_user: '{{ default_ansible_user }}'
+    default_ansible_user: ansible
+    default_user_groups: "{{ 'sudo,docker' if 'docker0' in ansible_facts['interfaces'] else 'sudo' }}"
 
   hosts:
     teresa:   # defiend in ~/.ssh/config
+#      ansible_user: root    # if default_ansible_user does not exist yet, specify an ssh user here
     lefail:
       ansible_host: le-fail.lan
-      ansible_user: root
+#      ansible_user: root    # if default_ansible_user does not exist yet, specify an ssh user here
 
   children:
 
