--- a/package.json
+++ b/package.json
@@ -53,6 +53,10 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.4",
+    "@types/config": "^3.3.0",
+    "@types/node-fetch": "^2.6.4",
+    "@types/node-rsa": "^1.1.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
