--- a/deploy/inventory.yml
+++ b/deploy/inventory.yml
@@ -4,14 +4,14 @@ all:
     ansible_become_method: sudo
     ansible_user: '{{ default_ansible_user }}'
     default_ansible_user: ansible
-    default_user_groups: "{{ 'sudo,docker' if 'docker0' in ansible_facts['interfaces'] else 'sudo' }}"
+    docker_group: "{{ 'docker' if 'docker0' in ansible_facts['interfaces'] else omit }}"
+    sudoer_groups: "{{ 'sudo,docker' if docker_group else 'sudo' }}"
     apt_packages:
       - sudo
       - bash-completion
       - ca-certificates
       - python3-pip
       - curl
-
 
   hosts:
 
@@ -23,7 +23,6 @@ all:
       skip_docker_install: true
       ansible_host: le-fail.lan
 #      ansible_user: root    # if default_ansible_user does not exist yet, specify an ssh user here
-
 
   children:
 
