--- a/deploy/host.yml
+++ b/deploy/host.yml
@@ -2,13 +2,17 @@
   vars:
     linux_users:
       - name: '{{ default_ansible_user }}'
-        groups: '{{ default_user_groups }}'
+        groups: '{{ sudoer_groups }}'
         ssh_keys: |
           ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIPHZEGTS/7CdQtGPduRCz0Ie0FMJgfIVvSWkxz1pzmst himura-personal@work-nb
+
+      - name: ci
+        groups: '{{ docker_group }}'
+        ssh_keys: |
           ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIJmm8FpdiLSHgVqHDDg46gYVg7rUh30nsVx0KtjYm4Tb gh-actions@hackerembassy-tg-bot
 
       - name: himura
-        groups: '{{ default_user_groups }}'
+        groups: '{{ sudoer_groups }}'
         ssh_keys: |
           ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBh43317pq5H98m+tsV+1VdvWtf+MxEgeaOn3dDSfwWf himura-termux@zenfone
           ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIPHZEGTS/7CdQtGPduRCz0Ie0FMJgfIVvSWkxz1pzmst himura-personal@work-nb
