--- a/.github/workflows/app-deployment.yml
+++ b/.github/workflows/app-deployment.yml
@@ -22,8 +22,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - 
-        id: meta
+      -
+        id: metadata
         uses: docker/metadata-action@v4
         with:
           images: ghcr.io/${{ github.repository }}
@@ -33,13 +33,13 @@ jobs:
           context: .
           file: ./deploy/Containerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.metadata.outputs.tags }}
+          labels: ${{ steps.metadata.outputs.labels }}
       -
         uses: ./.github/actions/deploy
         with:
           ssh_user: ci
-          ssh_identity: '|1|RY2fnr8tltHJk97RXktcFWLP6CU=|Q+sQMkU4H3SYupP+XBlB8EVQFSY= ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFYdFvcbtPcmrRRJstpQuxE7TdPR2+yCbAcOfn5Aa1uq'
+          ssh_identity: ${{ vars.deploy_target_identity }}
           ssh_host: ${{ secrets.deploy_target_host }}
           ssh_port: ${{ secrets.deploy_target_port }}
           ssh_key: ${{ secrets.deploy_target_key }}
