--- a/deploy/roles/hackem_bot/tasks/main.yml
+++ b/deploy/roles/hackem_bot/tasks/main.yml
@@ -12,9 +12,9 @@
         dest: production.json
     config_volume_files:
       - src: pub.key
-        dest: sec/pub.key
+        dest: pub.key
       - src: priv.key.vault
-        dest: sec/priv.key
+        dest: priv.key
     docker_compose_definition:
       version: '3.8'
       services:
@@ -22,7 +22,7 @@
           container_name: "{{ service_name }}"
           image: ghcr.io/hackerembassy/hackerembassy-tg-bot:ci-cd  # TODO
           volumes:
-            - config:/app/config
+            - config:/app/config/sec
             - db:/app/data/db
           environment:
             - NODE_ENV=production
