--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "easy-currencies": "^1.7.0",
     "express": "^4.18.2",
     "fast-csv": "^4.3.6",
+    "i18next": "^23.1.0",
+    "i18next-fs-backend": "^2.1.5",
     "local-devices": "^4.0.0",
     "luci-rpc": "^1.0.5",
     "mqtt": "^4.3.7",
