--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,6 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "prettier/prettier": ["error"]
+        "prettier/prettier": ["warn"]
     }
 }
