--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/config": "^3.3.0",
     "@types/node-fetch": "^2.6.4",
     "@types/node-rsa": "^1.1.1",
+    "@types/node-telegram-bot-api": "^0.61.6",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
