--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,8 @@
         "prettier/prettier": ["warn"],
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/no-this-alias": "off",
-        "@typescript-eslint/ban-ts-comment": "off"
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/no-explicit-any": "off"
 
     }
 }
