--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Hacker Embassy management bot",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "start-background": "nohup node app.js &",
+    "start": "npx ts-node app.ts",
+    "start-background": "nohup npx ts-node app.ts &",
     "start-service": "node embassyApi.js",
     "start-service-background": "nohup node embassyApi.js &",
     "embassy-api-service": "/usr/bin/node embassyApi.js",
-    "dev": "nodemon app.js",
+    "dev": "nodemon app.ts",
     "dev-service": "nodemon embassyApi.js",
     "dev-both": "run-p dev dev-service",
     "stop-embassy-api": "skill -c 'nohup node embassyApi.js &'",
@@ -51,6 +51,7 @@
     "node-telegram-bot-api": "^0.60.0",
     "nodemon": "^2.0.20",
     "ping": "^0.4.4",
+    "ts-node": "^10.9.1",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
