--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
       "allowJs": true,
       "checkJs": true,
       "target": "ES2022",
+      "module": "NodeNext",
       "moduleResolution": "Node",
       "noEmit": true,
     },
