TS migration part 2

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/node-fetch": "^2.6.4",
     "@types/node-rsa": "^1.1.1",
     "@types/node-telegram-bot-api": "^0.61.6",
+    "@types/ping": "^0.4.1",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.42.0",
