--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.4",
     "@types/config": "^3.3.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/node": "^14.18.36",
     "@types/node-fetch": "^2.6.4",
     "@types/node-rsa": "^1.1.1",
