package.json scripts and version bump

--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "name": "hacker-embassy-bot",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Hacker Embassy management bot",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
     "start": "npx ts-node app.ts",
     "start-background": "nohup npx ts-node app.ts &",
-    "start-service": "node embassyApi.js",
-    "start-service-background": "nohup node embassyApi.js &",
-    "embassy-api-service": "/usr/bin/node embassyApi.js",
+    "start-service": "npx ts-node embassyApi.ts",
+    "start-service-background": "nohup npx ts-node embassyApi.ts &",
+    "embassy-api-service": "/usr/bin/npx ts-node embassyApi.ts",
     "dev": "nodemon app.ts",
-    "dev-service": "nodemon embassyApi.js",
+    "dev-service": "nodemon embassyApi.ts",
     "dev-both": "run-p dev dev-service",
-    "stop-embassy-api": "skill -c 'nohup node embassyApi.js &'",
+    "stop-embassy-api": "skill -c 'nohup npx ts-node embassyApi.ts &'",
     "git": "git add * && git commit && git push",
     "git-redo": "git add * && git commit --amend && git push --force",
     "update-and-start": "npm run kill && git pull && npm i && npm run start-bot-background",
     "start-api-https": "sudo caddy start --config ./deploy/api/Caddyfile 2>/dev/null",
-    "kill": "skill -c nohup node app.js &",
+    "kill": "skill -c nohup npx ts-node app.ts &",
     "backup": "mkdir ./data/backup -p && cp ./data/db/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null",
     "reset": "mkdir ./data/backup -p && mv ./data/data.db ./data/backup/data`date +\"%H%M%S%m%d%Y\"`.db 2>/dev/null && cp ./data/sample.db ./data/data.db",
     "init-dev": "node ./scripts/initDev.js",
     "prepare": "husky install",
-    "lint": "eslint src/**/*.js",
-    "lint-fix": "eslint --fix src/**/*.js",
-    "pretty": "prettier --write 'src/**/*.js'"
+    "lint": "eslint '**/*.{ts,js}'",
+    "lint-fix": "eslint '--fix **/*.{ts,js}'",
+    "pretty": "prettier --write '**/*.{ts,js}'"
   },
   "author": "Nick Kiselev",
   "license": "ISC",
