--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended"
       ],
-    "plugins": ["prettier", "@typescript-eslint"],
+    "plugins": ["prettier", "simple-import-sort", "@typescript-eslint"],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module",
@@ -17,6 +17,8 @@
     },
     "rules": {
         "prettier/prettier": ["warn"],
+        "simple-import-sort/imports": "error",
+        "simple-import-sort/exports": "error",
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/no-this-alias": "off",
         "@typescript-eslint/ban-ts-comment": "off",
